--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <head>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <link rel="stylesheet" href=".assets/css/challenge.css" />
+            <link rel="stylesheet" href="ubiquitous-portfolio/.assets/css/challenge1.css" />
             <title>Zachary Imerzel</title>
         </head>
         <body>
@@ -85,16 +85,16 @@
 
                     <div class="containers">
                         <div class="container1">
-                            <a href="https://www.w3schools.com/cssref/css_inherit.asp"><img src=".assets\images\portfolio1.jpg" alt="Run Buddy"></a>
+                            <a href="https://zimerzel.github.io/run-buddy/"><img src="ubiquitous-portfolio/.assets/images/portfolio1.jpg" alt="Run Buddy"></a>
                             <h1>Run Buddy</h1>
                         </div>
                         <div class="flex-container">
                             <div class="container2">
-                                <img src=".assets\images\portfolio1.jpg" alt="Run">
+                                <a href="https://zimerzel.github.io/run-buddy/"><img src="ubiquitous-portfolio/.assets/images/portfolio1.jpg" alt="Run"></a>
                                 <h2>Run Buddy</h2>
                             </div>
                             <div class="container3">
-                                <img src=".assets\images\portfolio1.jpg" alt="Runn">
+                                <a href="https://zimerzel.github.io/run-buddy/"><img src="ubiquitous-portfolio/.assets/images/portfolio1.jpg" alt="Runn"></a>
                                 <h2>Run Buddy</h2>
                             </div>
                         </div>
@@ -108,7 +108,7 @@
                         Resume
                     </h2>
                     <div class="resume">
-                        <img src=".assets\images\Screen-Shot-2018-02-20-at-11.20.47-1.png" alt="resume">
+                        <img src="ubiquitous-portfolio/.assets/images/Screen-Shot-2018-02-20-at-11.20.47-1.png" alt="resume">
                     </div>
                 </div>
             </section>
