--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <head>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <link rel="stylesheet" href="ubiquitous-portfolio/.assets/css/challenge1.css" />
+            <link rel="stylesheet" type="text/css" href="ubiquitous-portfolio/.assets/css/challenge1.css" />
             <title>Zachary Imerzel</title>
         </head>
         <body>
