--- a/index.html
+++ b/index.html
@@ -86,15 +86,15 @@
                     <div class="containers">
                         <div class="container1">
                             <a href="https://misn0147.github.io/meal_match/"><img src="assets/images/meal match.png" alt="Meal Match"></a>
-                            <h1>Run Buddy</h1>
+                            <h1>Meal Match</h1>
                         </div>
                         <div class="flex-container">
                             <div class="container2">
                                 <a href="https://zimerzel.github.io/Weather-Today/"><img src="assets/images/116834786-46195f00-ab85-11eb-848a-25b745b30e5d.png" alt="Run"></a>
-                                <h2>Run Buddy</h2>
+                                <h2>Weather Today</h2>
                             </div>
                             <div class="container3">
-                                <a href="https://zimerzel.github.io/run-buddy/"><img src="assets/images/portfolio1.jpg" alt="Runn"></a>
+                                <a href="https://majestic-mammoth-cave-33282.herokuapp.com/dashboard"><img src="./assets/images/UTGR.png" alt="Runn"></a>
                                 <h2>Run Buddy</h2>
                             </div>
                         </div>
