--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             </div>
                             <div class="container3">
                                 <a href="https://majestic-mammoth-cave-33282.herokuapp.com/dashboard"><img src="./assets/images/UTGR.png" alt="Runn"></a>
-                                <h2>UT Gaming Reviews</h2>
+                                <h2>UT Gaming Reviews(In Developement)</h2>
                             </div>
                         </div>
                     </div>
@@ -82,7 +82,7 @@
                         Resume
                     </h2>
                     <div class="resume" id="imgresume">
-                        <img src="assets/images/Resume1024_1.png" alt="resume">
+                        <img src="./assets/images/Resume(Current)1024_1.png" alt="resume">
                     </div>
                 </div>
             </section>
