added sofa spud

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         </div>
                         <div class="flex-container">
                             <div class="container2">
-                                <a href="https://zimerzel.github.io/Weather-Today/"><img src="assets/images/116834786-46195f00-ab85-11eb-848a-25b745b30e5d.png" alt="Run"></a>
+                                <a href="https://github.com/godwinbw/sofa-spud"><img src="./assets/images/sofa.PNG" alt="Sofa-Spud"></a>
                                 <h2>Weather Today</h2>
                             </div>
                             <div class="container3">
