--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <div class="flex-container">
                             <div class="container2">
                                 <a href="https://github.com/godwinbw/sofa-spud"><img src="./assets/images/sofa.PNG" alt="Sofa-Spud"></a>
-                                <h2>Weather Today</h2>
+                                <h2>Sofa Spud</h2>
                             </div>
                             <div class="container3">
                                 <a href="https://majestic-mammoth-cave-33282.herokuapp.com/dashboard"><img src="./assets/images/UTGR.png" alt="Runn"></a>
